--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,8 +1,12 @@
 workflows:
-  default-workflow:
-    name: Default Workflow
+  build-android:
+    name: Build Android Release
+    environment:
+      flutter: stable
     scripts:
-      - name: Get Flutter packages
+      - name: Get dependencies
         script: flutter pub get
       - name: Build APK
-        script: flutter build apk
+        script: flutter build apk --release
+    artifacts:
+      - build/app/outputs/flutter-apk/app-release.apk
